<resources>
    <string name="app_name">News App</string>

    // list items layout text place holders
    <string name="publication_date">Publication Date</string>
    <string name="contributor_name">Contributor Name</string>
    <string name="content_summary">Content Summary is a snippet of the article for the reader to glimpse
        and decide to click to be taken to the full article</string>
    <string name="section_name">Section Name</string>
    <string name="web_title">Web Title</string>

    // blank screen message
    <string name="sorry_no_news">Sorry no news to report!</string>

    // no internet message
    <string name="no_internet">No Internet Connection</string>

    // setting menu strings
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="results_key">results</string>
    <string name="results_title">Page Results Returned</string>
    <string name="results_default">15</string>

</resources>