<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/web_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/web_title"
        android:textColor="#A93B39"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/section_name"
        android:textColor="#C55250"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/web_title_view" />

    <TextView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/content_summary"
        android:textColor="#585858"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/section_name_view" />

    <TextView
        android:id="@+id/contributor_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/contributor_name"
        android:textColor="#3E3E3E"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_view" />

    <TextView
        android:id="@+id/publication_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/publication_date"
        android:textColor="#3E3E3E"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_view" />

</androidx.constraintlayout.widget.ConstraintLayout>